--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">esoftgreat</string>
+    <string name="app_name">sipapat</string>
     <string name="image_view">Image View</string>
 	<string name="mgks_promo">esoftgreat.com/\ngithub.com/iwansafr</string>
     <string name="rate_dialog_title">Rate</string>
